--- a/src/scss/speedbox.scss
+++ b/src/scss/speedbox.scss
@@ -1,3 +1,8 @@
+.button.speed-indicator {
+    width         :auto;
+    padding-left  : 10px;
+    padding-right : 15px;
+}
 
 .button.speed {
     width:auto;
